--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Página inicial do site!!</h1>
-    <img src="" alt="">
+    <img src="./docs/assets/images/dogf.jpg" alt="Cachorro homofóbico">
 
 
     <hr>
