Formatação da imagem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Página inicial do site!!</h1>
-    <img src="./docs/assets/images/dogf.jpg" alt="Cachorro homofóbico">
+    <figure>
+        <img align="center" src="./docs/assets/images/dogf.jpg" alt="Cachorro homofóbico" width="50px"/>
+    </figure>
 
 
     <hr>
